# docs/swagger.yaml
@@ -44,10 +44,6 @@ definitions:
         description: 账号
         example: xiaom
         type: string
-      createdTime:
-        description: 创建时间
-        example: ' '
-        type: string
       email:
         description: 邮箱
         example: ' '
@@ -66,6 +62,10 @@ definitions:
         type: string
       phone:
         description: 手机
+        example: ' '
+        type: string
+      phoneCode:
+        description: 手机验证码
         example: ' '
         type: string
       photoFile:
@@ -297,7 +297,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: 只有管理员可以添加用户
+      description: 可注册
       parameters:
       - description: desc
         in: body
@@ -394,6 +394,39 @@ paths:
           schema:
             type: string
       summary: 修改用户
+      tags:
+      - 用户
+  /users/{id}/bindPhone/:
+    put:
+      consumes:
+      - multipart/form-data
+      description: 只有管理员/或用户自己可以修改
+      parameters:
+      - description: 用户id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: 验证码
+        in: formData
+        name: code
+        required: true
+        type: string
+      - description: 手机号
+        in: formData
+        name: phone
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{"message":"成功绑定!", "results": null}'
+          schema:
+            type: string
+        "400":
+          description: '{"msg": "参数错误", "results": null}'
+          schema:
+            type: string
+      summary: 绑定手机
       tags:
       - 用户
   /users/{id}/photo/:
